ingress/ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 31376
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
      nodePort: 32179
