ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: asset-spy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - asset-spy.online
      secretName: asset-spy-tls
  rules:
    - host: asset-spy.online
      http:
        paths:
          - path: /auth-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /user-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8082
          - path: /products-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-service
                port:
                  number: 8081
